# neurosim

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
paper/: neurosim.tex  references.bib
results/: evaluation_results.json  training_logs.json  training_results.json
scripts/: train_all.py  train_surrogate.py
src/neurosim/: __init__.py
src/neurosim/agents/: __init__.py  csp_lda.py  ppo.py  random_agent.py
src/neurosim/benchmarks/: __init__.py  metrics.py  runner.py  tiers.py  transfer.py
src/neurosim/data/: __init__.py  features.py  formats.py  loader.py  preprocessing.py
src/neurosim/envs/: __init__.py  cursor_control.py  decoder_adapt.py  observation.py  speller_nav.py  wrappers.py
src/neurosim/models/: __init__.py  coadaptation.py  drift.py  noise.py  pipeline.py  surrogate.py
tests/test_agents/: test_csp_lda.py  test_random_agent.py
tests/test_benchmarks/: test_metrics.py  test_tiers.py  test_transfer.py
tests/test_data/: test_features.py  test_formats.py  test_loader.py  test_preprocessing.py
tests/test_envs/: test_cursor_control.py  test_decoder_adapt.py  test_observation.py  test_speller_nav.py  test_wrappers.py
tests/test_models/: test_coadaptation.py  test_drift.py  test_noise.py  test_pipeline.py  test_surrogate.py
