[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neurosim"
version = "0.1.0"
description = "A Gymnasium platform for reinforcement learning in brain-computer interfaces"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Hass Dhia", email = "partners@smarttechinvest.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "gymnasium>=0.29",
]

[project.optional-dependencies]
data = ["mne>=1.6", "moabb>=1.0"]
dev = ["pytest>=7.0", "pytest-cov", "ruff", "mypy"]
train = ["stable-baselines3>=2.0", "torch>=2.0"]
surrogate = ["torch>=2.0"]
all = ["neurosim[data,dev,train,surrogate]"]

[project.urls]
Repository = "https://github.com/HassDhia/neurosim"
Documentation = "https://github.com/HassDhia/neurosim#readme"

[project.scripts]
neurosim-train = "neurosim.agents.ppo:main"
neurosim-benchmark = "neurosim.benchmarks.runner:main"

[tool.hatch.build.targets.wheel]
packages = ["src/neurosim"]

[tool.hatch.build.targets.sdist]
exclude = [
    "results/",
    "paper/",
    ".venv/",
    ".claude/",
    "*.pt",
    "*.zip",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 99
